<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/delete_ingredient"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvDeleteTitle"
        style="?ingredientsDeleteTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        android:text="@string/tvDeleteTitle"
        android:textSize="18dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvDeleteMessage"
        style="?ingredientsDeleteDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvDeleteTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="32dp"
        android:lines="2"
        android:text="@string/tvDeleteMessage"
        android:textAlignment="center"
        android:textSize="16dp" />

    <LinearLayout
        android:id="@+id/layoutDeleteButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvDeleteMessage"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btDeleteCancel"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/btn_orange_shadow"
            android:paddingBottom="6dp"
            android:paddingLeft="15dp"
            android:paddingRight="18dp"
            android:paddingTop="3dp"
            android:text="@string/btDeleteCancel"
            android:textColor="@color/PantryWhite"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btDeleteConfirm"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/btn_yellow_shadow"
            android:paddingBottom="6dp"
            android:paddingLeft="15dp"
            android:paddingRight="18dp"
            android:paddingTop="3dp"
            android:text="@string/btDeleteConfirm"
            android:textColor="@color/PantryWhite"
            android:textSize="12sp" />
    </LinearLayout>

</RelativeLayout>