<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sonnytron.sortatech.pantryprep.Fragments.IngredientFilterFragment">


    <TextView
        android:id="@+id/tvIngFilterTitle"
        style="?ingredientsFilterTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/lvFilterRecipeList"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/lvFilterRecipeList"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/tvRecipeFilterTitle" />

    <ListView
        android:id="@+id/lvFilterRecipeList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/llButtonManager"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvIngFilterTitle"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:choiceMode="multipleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp" />


    <LinearLayout
        android:id="@+id/llButtonManager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/lvFilterRecipeList"
        android:layout_toEndOf="@+id/tvIngFilterTitle">

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/lvFilterRecipeList"
            android:layout_marginBottom="40dp"
            android:background="@drawable/btn_yellow_shadow"
            android:paddingBottom="6dp"
            android:paddingLeft="15dp"
            android:paddingRight="18dp"
            android:paddingTop="3dp"
            android:text="@string/btnIngFilterSave"
            android:textColor="@color/PantryWhite"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignEnd="@+id/lvFilterRecipeList"
            android:layout_below="@+id/lvFilterRecipeList"
            android:layout_marginBottom="40dp"
            android:layout_marginLeft="70dp"
            android:background="@drawable/btn_orange_shadow"
            android:paddingBottom="6dp"
            android:paddingLeft="15dp"
            android:paddingRight="18dp"
            android:paddingTop="3dp"
            android:text="@string/btnIngFilterCancel"
            android:textColor="@color/PantryWhite"
            android:textSize="12sp" />
    </LinearLayout>

</RelativeLayout>
